--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 license = "MIT"
 
 [dependencies]
+clap = { version = "4.5.56", features = ["derive"] }
 tokio = { version = "1.49.0", features = [
   "fs",
   "macros",
