--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 [dependencies]
 clap = { version = "4.5.56", features = ["derive"] }
 chrono = "0.4.42"
+thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = [
   "fs",
   "macros",
