--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ license = "MIT"
 
 [dependencies]
 clap = { version = "4.5.56", features = ["derive"] }
+toml = "0.9.11"
+xdg = "3.0.0"
+serde = { version = "1.0.228", features = ["derive"] }
 chrono = "0.4.42"
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = [
