--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ toml = "0.9.11"
 xdg = "3.0.0"
 serde = { version = "1.0.228", features = ["derive"] }
 chrono = "0.4.42"
+reqwest = { version = "0.13.1", features = ["json"] }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = [
   "fs",
