--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ clap = { version = "4.5.56", features = ["derive"] }
 toml = "0.9.11"
 xdg = "3.0.0"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.138"
 chrono = "0.4.42"
 reqwest = { version = "0.13.1", features = ["json"] }
 thiserror = "2.0.18"
